--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,11 @@
     <title>Digital Clock</title>
 </head>
 <body>
-    <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
+    <div class="clock-container">
+        <div class="clock-display">
+            <div id="MyClockDisplay" class="clock"></div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
