--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="clock-container">
         <div class="clock-display">
             <div id="MyClockDisplay" class="clock"></div>
+             <hr class="divider"> 
+            <div id="DateDisplay" class="date"></div>
         </div>
     </div>
     <script src="script.js"></script>
